# aki-the-bot

./: .env.example  .gitignore  .railwayignore  DEPLOYMENT.md  Dockerfile  LICENSE  PHASE2_PRODUCTION.md  PLAN.md  Procfile  README.md  SETUP.md  SOUL_ARCHITECTURE.md  db_schema_snapshot.txt  dev.py  main.py  models_list.txt  nixpacks.toml  pyproject.toml  railpack.json  railway.json  requirements.txt  run_server.py  soul.md  soul_engineering_memory.md  soul_for_Dev.md  soul_memory.md  soul_reflect_vision.md  start_all.py
agents/: __init__.py  calendar_tools.py  companion_agent.py  orchestrator.py  soul_agent.py
api/: server.py
bot/: static_server.py  telegram_handler.py
config/: CONFIGURATION.md  pricing.py  settings.py  stickers.json
core/: __init__.py  exceptions.py  logging_config.py
docs/: TELEGRAM_COMMANDS.md  simulation_report_simon.md  spotify_dj_technical.md  spotify_engine_analysis.md  spotify_troubleshooting_log.md
frontend/: index.html  package-lock.json  package.json
memory/: database.py  database_async.py  memory_manager.py  memory_manager_async.py  models.py  vector_store.py
miniapp/: RAILWAY_CHEATSHEET.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  RAILWAY_SEPARATE_SERVICE.md  README.md  SETUP_GUIDE.md  __init__.py  api.py  index.html  nixpacks.toml  railway.json  run_api.py  test_api.sh
prompts/: __init__.py  chapter.py  compact.py  companion.py  condensation.py  daily_message.py  life_story.py  memory.py  note_synthesis.py  observation.py  personalized_insights.py  plan_synthesis.py  proactive.py  reach_out.py  reflection.py  spotify_dj.py  surface.py  (+1 more)
(+121 files in other folders)
