[project]
name = "ai-companion"
version = "0.1.0"
description = "Personal AI companion that proactively cares for and supports users"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.50.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pinecone>=5.0.0",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
]
