[project]
name = "ai-companion"
version = "0.1.0"
description = "Personal AI companion that proactively cares for and supports users"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.50.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "pytz>=2025.2",
    "dateparser>=1.3.0",
    "watchdog>=6.0.0",
    "streamlit>=1.40.0",
    "psycopg2-binary>=2.9.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest-html>=4.2.0",
]
